# cv_board

./: README.md  pyproject.toml
src/: app.py  event_handler.py  utils.py
tests/: draw_test.py  draw_tk.py  event_handler.py  pen_draw.py  t1.py  test.py  test_finger_straight.py
