[tool.poetry]
name = "cv-board"
version = "0.1.0"
description = ""
authors = ["SurajAiri <surajairi.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
jupyter = "^1.1.1"
opencv-python = "^4.10.0.84"
pyautogui = "^0.9.54"
mediapipe = "^0.10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
